--- a/index7.html
+++ b/index7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0059)file:///C:/Users/Vitalik/Desktop/New%20Text%20Document.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Открыть XLSX файл</title>
+    <title>МФІТ росклад</title>
     <script src="./index46546_files/xlsx.full.min.js.download"></script>
     <style>
         table {
